# merchant-financial-os

./: .dockerignore  .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260417_0001_initial.py  20260421_0002_hybrid_evidence.py  20260421_0003_recorded_at_default.py
apps/api/app/: main.py
apps/api/app/api/: routes.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: all_models.py  audit_log.py  fraud_alert.py  merchant.py  offer.py  transaction.py  user.py
apps/api/app/schemas/: auth.py  common.py  merchant.py  payment.py
apps/api/app/services/: audit.py  fraud.py  offers.py  payments.py  seed.py  trust.py
apps/api/app/utils/: dependencies.py  rate_limit.py
apps/api/tests/: test_api.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx  template.tsx
apps/web/app/(app)/admin/dashboard/: page.tsx
apps/web/app/(app)/merchant/onboarding/: page.tsx
apps/web/components/: auth-guard.tsx  charts.tsx  evidence-badge.tsx  language-switcher.tsx  providers.tsx  pulse-feed.tsx  shell.tsx  stat-card.tsx
apps/web/lib/: api.test.ts  api.ts  labels.ts  session.test.ts  session.ts  types.ts
docs/: api.md  architecture.md  demo-script.md  deployment.md  production-path.md  seed-data.md
infra/: api.env.example  docker-compose.yml
(+4 files in other folders)
